PRSUM-10218: Arrangement Manager Service API V3 Update